--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -95,6 +95,9 @@
         
         <div class="section">
             <h2>Generated Data and Predictions</h2>
+             <div id="loading-gif">
+                <img src="../static/protection.gif" alt="Loading..." />
+            </div>
             <pre id="generated-data"></pre>
         </div>
         
